tests/baselines/reference/derivedStructTransitivity.errors.txt
tests/cases/conformance/structs/members/inheritanceAndOverriding/derivedStructTransitivity.ts(25,12): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== tests/cases/conformance/structs/members/inheritanceAndOverriding/derivedStructTransitivity.ts (1 errors) ====
    // doc 2.3
    // The type of an overriding property member doesn’t need to be assignable to the type of the overridden property member
    
    struct C {
        foo(x: number) { }
    }
    
    struct D extends C {
        foo() { } // ok to drop parameters, function override
    }
    
    struct E extends D {
        foo(x?: string) { } // ok to add optional parameters
    }
    
    var c: C;
    var d: D;
    var e: E;
    c = d; // ok
    c = e; // ok
    
    var r = c.foo(1);
    var r2 = e.foo('');
    r2 = e.foo();
    r2 = e.foo(1); // error, not match
               ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    r2 = (<C>e).foo(1); // ok